# BlockTrade.AI

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  mev_bot_detector.keras  model.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: config.py  main.py  visualize.py
app/libs/: graph.json.js
